Fix alignment final

--- a/styles/main.css
+++ b/styles/main.css
@@ -166,6 +166,7 @@ section.game {
 .selection {
   display: flex;
   justify-content: center;
+  align-items: center;
   margin: 5px;
   outline: none;
   border: 8px solid var(--border-color);
